--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Nikitaw99</h1>
+<p>This is a page which is currently work in progress.</p>
+<p><a href="Nikitaw99.github.io/backwars-leekspin
+">Check out backwards leekspin!</a></p>
 </body>
 </html>
