--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <body>
 <h1>Nikitaw99</h1>
 <p>This is a page which is currently work in progress.</p>
-<p><a href="Nikitaw99.github.io/backwars-leekspin
-">Check out backwards leekspin!</a></p>
+<p><a href="backwars-leekspin">Check out backwards leekspin!</a></p>
 </body>
 </html>
