--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Nikitaw99</h1>
-<p>This is a page which is currently work in progress.</p>
-<p><a href="backwars-leekspin">Check out backwards leekspin!</a></p>
-</body>
-</html>
+  <html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    </head>
+    <body>
+      <h1>Nikitaw99</h1>
+      <p>This is a page which is currently work in progress.</p>
+      <p><a href="backwars-leekspin">Check out backwards leekspin!</a></p>
+    </body>
+  </html>
