--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
       <p><a href="backwars-leekspin">Check out backwards leekspin!</a></p>
       <blockquote class="twitter-tweet" data-lang="ru"><p lang="en" dir="ltr">I always loved Github. Always.</p>&mdash; Nikita Manahov (@manahov2004) <a href="https://twitter.com/manahov2004/status/715874688900153344">1 апреля 2016 г.</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline"  href="https://twitter.com/manahov2004" data-widget-id="715875369061117952">Твиты от @manahov2004</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
     </body>
   </html>
