--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
       <h1>Nikitaw99</h1>
+      Check out the <a href="social">social page</a>!
       <p>This is a page which is currently work in progress.</p>
       <p><a href="backwars-leekspin">Check out backwards leekspin!</a></p>
       <blockquote class="twitter-tweet" data-lang="ru"><p lang="en" dir="ltr">I always loved Github. Always.</p>&mdash; Nikita Manahov (@manahov2004) <a href="https://twitter.com/manahov2004/status/715874688900153344">1 апреля 2016 г.</a></blockquote>
