--- a/social/index.html
+++ b/social/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </head>
     <body>
       <h1>Welcome to my social page.</h1>
