--- a/social/index.html
+++ b/social/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+      <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </head>
     <body>
