--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
