--- a/social/index.html
+++ b/social/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <h1>Welcome to my social page.</h1>
-      <h3><a href="/"></a>Click here to go back</a>.</h3>
+      <h3><a href="/">Click here to go back</a>.</h3>
       <a class="twitter-timeline"  href="https://twitter.com/manahov2004" data-widget-id="715875369061117952">Твиты от @manahov2004</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
