--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	  <title>Nikitaw99 - Github</title>
     </head>
     <body>
       <h1>Nikitaw99</h1>
